Add config model

--- a/web/author_display/webapp/i18n/i18n_ru.properties
+++ b/web/author_display/webapp/i18n/i18n_ru.properties
@@ -1,5 +1,25 @@
+#************************************#
+#          MasterView
+#************************************#
 userName=Имя пользоателя
 appTitle=Писатели и их произведения
 appDescription=Финальное задание по SAP CLOUD
+authorNameText=ФИО писателя
+authorCreatedText=Добален
+authorUpdatedText=Изменен
+authorsTitle=Писатели
+
+#************************************#
+#          DetailView
+#************************************#
+generalInfo=Главная информация
+
 editBtnName=Редактировать
 deleteBtnName=Удалить
+authorNameLabel=ФИО писателя
+authorIDLabel=Уникальный идентификатор писателя
+booksTitle=Произведения автора
+
+addressStreetLabel=Улица
+addressHomeLabel=Номер дома
+addressCityLabel=Город
