--- a/web/author_display/webapp/i18n/i18n.properties
+++ b/web/author_display/webapp/i18n/i18n.properties
@@ -16,9 +16,13 @@ generalInfo=Main information
 
 editBtnName=Edit
 deleteBtnName=Remove
+
 authorNameLabel=The name of the writer
 authorIDLabel=Unique identifier of the writer
+
 booksTitle=Author's works
+bookId=ID book
+bookName=Book name
 
 addressStreetLabel=Street
 addressHomeLabel=House number
