--- a/web/author_display/webapp/i18n/i18n_de.properties
+++ b/web/author_display/webapp/i18n/i18n_de.properties
@@ -16,9 +16,13 @@ generalInfo=Startseite Informationen
 
 editBtnName=Redigieren
 deleteBtnName=Entfernen
+
 authorNameLabel=Name des Schriftstellers
 authorIDLabel=Eindeutige Autor-id
+
 booksTitle=Werke des Autors
+bookId=Buch-id
+bookName=Buchtitel
 
 addressStreetLabel=Straße
 addressHomeLabel=Hausnummer
