--- a/web/author_display/webapp/i18n/i18n_ru.properties
+++ b/web/author_display/webapp/i18n/i18n_ru.properties
@@ -16,9 +16,13 @@ generalInfo=Главная информация
 
 editBtnName=Редактировать
 deleteBtnName=Удалить
+
 authorNameLabel=ФИО писателя
 authorIDLabel=Уникальный идентификатор писателя
+
 booksTitle=Произведения автора
+bookId=ID книги
+bookName=Название книги
 
 addressStreetLabel=Улица
 addressHomeLabel=Номер дома
