Add creating author address

--- a/web/author_display/webapp/i18n/i18n_ru.properties
+++ b/web/author_display/webapp/i18n/i18n_ru.properties
@@ -27,3 +27,14 @@ bookName=Название книги
 addressStreetLabel=Улица
 addressHomeLabel=Номер дома
 addressCityLabel=Город
+
+#************************************#
+#          FragmentDefinition
+#************************************#
+fragmentName=Добавить писателя
+newAuthorName=ФИО автора
+newAddressCity=Город
+newAddressStreet=Улица
+newAddressHome=Номер дома
+createBtn=Добавить
+cancelBtn=Отмена
