Add creating books

--- a/web/author_display/webapp/i18n/i18n_ru.properties
+++ b/web/author_display/webapp/i18n/i18n_ru.properties
@@ -38,3 +38,9 @@ newAddressStreet=Улица
 newAddressHome=Номер дома
 createBtn=Добавить
 cancelBtn=Отмена
+
+#************************************#
+#          BookFragment
+#************************************#
+bookFragmentName=Добавить книгу
+newBookName=Название
