Add some bundles

--- a/web/author_display/webapp/i18n/i18n_de.properties
+++ b/web/author_display/webapp/i18n/i18n_de.properties
@@ -27,3 +27,20 @@ bookName=Buchtitel
 addressStreetLabel=Straße
 addressHomeLabel=Hausnummer
 addressCityLabel=Stadt
+
+#************************************#
+#          FragmentDefinition
+#************************************#
+fragmentName=Add author
+newAuthorName=Author name
+newAddressCity=City
+newAddressStreet=Street
+newAddressHome=Home
+createBtn=Add
+cancelBtn=Cancel
+
+#************************************#
+#          BookFragment
+#************************************#
+bookFragmentName=Add book
+newBookName=Book title
